# CLTestSuit

./: .gitignore  CMakeLists.txt  README.md  Rules.md  runner.py
tests/host_verified_sample/: kernel.cl  main.cpp
tests/sample_test/: expected.txt  kernel.cl  main.cpp  manifest.json
